crates/tui/src/snapshots/tui__view__tests__approval_badge_with_the_panel_closed.snap
---
source: crates/tui/src/view_tests.rs
expression: wide(&mut app).0
---









                                                                         run it
! 2 waiting · /approvals or ⌥A
> draft
