crates/tui/src/snapshots/tui__view__tests__approval_irreversible_header.snap
---
source: crates/tui/src/view_tests.rs
expression: wide(&mut app).0
---


                                                                      ▄▄▄▄▄▄▄▄▄
                                                                       run it ▐
                                                                      ▀▀▀▀▀▀▀▀▀
                                                                          00:00
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ approval · s_aaaaaaaaaaaaaaaa · 1 of 1 · irreversible
▌ asked by a project rule: git push
▌ › allow once
▌   deny · type to add feedback
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
