crates/tui/src/snapshots/tui__view__tests__approval_review_escalation_with_rule.snap
---
source: crates/tui/src/view_tests.rs
expression: shown
---


                                                                         run it
• Ran 1 command · shell npm test --watch
  0 shell npm test --watch · running
approval · s_aaaaaaaaaaaaaaaa · 1 of 1
the reviewer escalated: it blocked three in a row
shell {"command":"npm test --watch"}
› allow once
  allow for this session: npm test
  always allow in this project: npm test
  deny · type to add feedback
