crates/tui/src/snapshots/tui__view__tests__approval_reviewer_failed.snap
---
source: crates/tui/src/view_tests.rs
expression: wide(&mut app).0
---







                                                                         run it
approval · s_aaaaaaaaaaaaaaaa · 1 of 1
the reviewer failed: the reviewer model did not answer
› allow once
  deny · type to add feedback
