crates/tui/src/snapshots/tui__view__tests__approval_standing_ask.snap
---
source: crates/tui/src/view_tests.rs
expression: shown
---

                                                                         run it
                                                                           00:00
• Ran 1 command · shell echo hi
  0 shell echo hi · running
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ approval · s_aaaaaaaaaaaaaaaa · 1 of 1
▌ asked by a global rule: echo hi
▌ shell {"command":"echo hi"}
▌ › allow once
▌   deny · type to add feedback
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
