crates/tui/src/snapshots/tui__view__tests__approval_two_of_three_across_sessions.snap
---
source: crates/tui/src/view_tests.rs
expression: wide(&mut app).0
---

                                                                      ▄▄▄▄▄▄▄▄▄
                                                                       run it ▐
                                                                      ▀▀▀▀▀▀▀▀▀
                                                                          00:00
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ approval · s_bbbbbbbbbbbbbbbb · 2 of 3
▌ asked by a global rule: echo hi
▌ shell {"command":"echo hi"}
▌ › allow once
▌   deny · type to add feedback
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
