crates/tui/src/snapshots/tui__view__tests__copied.snap
---
source: crates/tui/src/view_tests.rs
expression: text(&buf)
---
                        Copied




                      plan it
                         00:00
rust                      copy
1 │ let x = 1;
>
