crates/tui/src/snapshots/tui__view__tests__draft_of_three_lines.snap
---
source: crates/tui/src/view_tests.rs
expression: screen(&app)
---



                                                       ▄▄▄▄▄
                                                        hi ▐
                                                       ▀▀▀▀▀
                                                       00:00
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
> first
  second
  third
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
